# python-web-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_07_0700_1cf54aa004c1_init2.py  2025_01_07_1253_ae9f84067247_message.py
scripts/: alembic_manage.sh  alembic_script.py
src/: app.py
src/api/: __init__.py  auth_router.py  course_router.py  student_router.py  user_router.py
src/api/middleware/: __init__.py  acess_log.py  auth.py  exception_handler.py  request_context.py
src/api/request_scheme/: student_req.py
src/api/response_scheme/: student_resp.py
src/domain/course/: course_repo.py  enrollment_repo.py  service.py
src/domain/user/: student_repo.py
src/infra/: logger.py  request_context.py
src/infra/auth/: jwt_handler.py  oapi_handler.py
src/infra/models/: __init__.py  course.py  enrollments.py  student.py
src/infra/seedwork/api/: api_base_scheme.py  api_exception.py  responses.py
src/infra/seedwork/domain/: entities.py  errors.py  kv_object.py
src/infra/seedwork/repo/: async_session.py  model_base.py  models.py  repositories.py
src/infra/seedwork/service/: entities.py  errors.py  kv_object.py
src/repo/: course_repo.py  enrollment_repo.py  student_repo.py
src/repo/models/: __init__.py  course.py  enrollments.py  student.py
src/service/: course_service.py
src/settings/: config.py  local_config.ini  prod_config.ini
src/utils/: app_response.py  json_encoding.py  strings.py
static/: index.html
